policies/require-pod-anti-affinity/.test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-pod-anti-affinity
policies:
  - ../policy.yaml
resources:
  - resources.yaml
results:
  - policy: require-pod-anti-affinity
    rule: require-replica-spreading
    kind: Deployment
    resources:
      - good-topology-spread
      - good-soft-antiaffinity
      - good-hard-antiaffinity
    result: pass
  - policy: require-pod-anti-affinity
    rule: require-replica-spreading
    kind: Deployment
    resources:
      - bad-no-spreading
    result: fail
